--- a/Notes-Missing-Articles.html
+++ b/Notes-Missing-Articles.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>${title}</title>
+    <title>eprinttools - Notes-Missing-Articles.html</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/site.css">
 </head>
@@ -22,7 +22,19 @@
 </nav>
 
 <section>
-${body}
+<h1 id="missing-articles">Missing Articles</h1>
+<p>Some articles imported via ep3apid aren’t appearing in the latest
+listings or in the author listings in EPrints (CaltechAUTHORS). This is
+also not getting listed in feeds. There is some field needed for these
+to appear, not sure which.</p>
+<h2 id="example-broken-eprints">Example broken EPrints</h2>
+<ul>
+<li>ID: 114194, Bill Goddards is co-author, title “Reaction Mechanisms,
+Kinetics, and Improved Catalysts for Ammonia Synthesis from Hierarchical
+High Throughput Catalyst Design”, didn’t appear in latest and is not
+showing up in Bills listing page:
+https://authors.library.caltech.edu/view/person-az/Goddard-W-A-III.html</li>
+</ul>
 </section>
 
 <footer>
