--- a/ROADMAP.html
+++ b/ROADMAP.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>${title}</title>
+    <title>eprinttools - ROADMAP.html</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/site.css">
 </head>
@@ -22,7 +22,26 @@
 </nav>
 
 <section>
-${body}
+<h1 id="roadmap">Roadmap</h1>
+<ol type="1">
+<li><input type="checkbox" disabled="" checked="" />Develop an extended
+API base on direct MySQL table access</li>
+<li><input type="checkbox" disabled="" checked="" />Implement a simple
+JSON model for crosswalking EPrints to Invenion 3</li>
+<li><input type="checkbox" disabled="" checked="" />Remove dependencies
+on cli package</li>
+<li><input type="checkbox" disabled="" checked="" />Implement rule sets
+for apply Caltech Library practice selectively</li>
+<li><input type="checkbox" disabled="" checked="" />Implement an
+extended EPrints API including support for metadata import</li>
+<li><input type="checkbox" disabled="" />Implement a index export JSON
+model for integration with Solr/OpenSearch/LunrJS</li>
+<li><input type="checkbox" disabled="" />Implement eprint update of
+metadata for existing records</li>
+<li><input type="checkbox" disabled="" />Implement complete crosswalk
+for EPrint XML records ot Invenio 3 records for all Caltech Library
+EPrints repositories</li>
+</ol>
 </section>
 
 <footer>
