--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>eprinttools</title>
+    <title>eprinttools - about.html</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/site.css">
 </head>
@@ -11,78 +11,34 @@
 </header>
 <nav>
 <ul>
-<li>
-<a href="/">Home</a>
-</li>
-<li>
-<a href="../">README</a>
-</li>
-<li>
-<a href="../license.html">LICENSE</a>
-</li>
-<li>
-<a href="../install.html">INSTALL</a>
-</li>
-<li>
-<a href="./">Documentation</a>
-</li>
-<li>
-<a
-href="https://github.com/caltechlibrary/eprinttools">Github</a>
-</li>
-<li>
-<a
-href="https://github.com/caltechlibrary/eprinttools/releases/latest">Releases</a>
-</li>
+    <li><a href="/">Home</a></li>
+    <li><a href="README.html">README</a></li>
+    <li><a href="LICENSE">LICENSE</a></li>
+    <li><a href="install.html">INSTALL</a></li>
+    <li><a href="user-manual.html">User Manual</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="https://github.com/caltechlibrary/eprinttools">GitHub</a></li>
 </ul>
 </nav>
 
 <section>
-<h1 id="command-line-tools">
-command line tools
-</h1>
+<h1 id="about-this-software">About this software</h1>
+<h2 id="eprinttools-1.2.1">eprinttools 1.2.1</h2>
+<h3 id="authors">Authors</h3>
 <ul>
-<li>
-<a href="eputil.html">eputil</a> is the new harvester, it talks to the
-REST API and can return JSON documents, XML or EPrints documents
-available from the REST API. It can be piped into a <a
-href="https://caltechlibrary.github.io/dataset">dataset</a> if needed
-</li>
-<li>
-<a href="epfmt.html">epfmt</a> is a command line utility to pretty print
-EPrints XML and convert to/from JSON
-<ul>
-<li>
-in the process of pretty printing it also validates the EPrints XML
-against the eprinttools Go package definitions
-</li>
+<li>R. S. Doiel</li>
 </ul>
-</li>
-<li>
-<a href="doi2eprintxml.html">doi2eprintxml</a> is a CaltechAUTHORS
-centric DOI to EPrint XML document generator
-</li>
-<li>
-<a href="ep3apid.html">ep3apid</a> is a web service that runs on
-localhost providing an extended EPrints 3 API via interaction with
-EPrints MySQL database(s)
-</li>
-</ul>
-<h2 id="tutorials">
-Tutorials
-</h2>
+<p>Command line tools, Golang package and Python module for working with
+the EPrints 3.x REST API</p>
 <ul>
-<li>
-Converting DOIs to EPrints XML
-<ul>
-<li>
-<a href="windows-10-workflow.html">Windows 10 Workflow</a>
-</li>
-<li>
-<a href="macos-workflow.html">macOS Workflow</a>
-</li>
+<li>License:
+https://caltechlibrary.github.io/eprinttools/license.html</li>
+<li>GitHub: https://github.com/caltechlibrary/eprinttools</li>
+<li>Issues: https://github.com/caltechlibrary/eprinttools/issues</li>
 </ul>
-</li>
+<h3 id="programming-languages">Programming languages</h3>
+<ul>
+<li>Go</li>
 </ul>
 </section>
 
