--- a/composit-views.html
+++ b/composit-views.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>${title}</title>
+    <title>eprinttools - composit-views.html</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/site.css">
 </head>
@@ -22,7 +22,35 @@
 </nav>
 
 <section>
-${body}
+<h2 id="composit-views">Composit Views</h2>
+<p>Composit views are lists of available values that can then be used to
+get lists of eprint ids. These are the lists typically found in the
+“Browse” page of EPrints.</p>
+<ul>
+<li>‘/{REPO_ID}/year’ returns a list of years that eprint records
+cover</li>
+<li>‘/{REPO_ID}/year/{YEAR}’ returns a list of eprint ids related to
+year</li>
+<li>‘/{REPO_ID}/person’ returns a list of objects with a person id
+attribute s and relationship that are in eprint records. E.g.
+‘{“peron_id”: “Doe-J”: “is_a”: [ “creator”, “contributor” ]}’</li>
+<li>‘/{REPO_ID}/person/{PERSON_ID}’ returns a list of eprint ids related
+to person id, maybe related as creator, editor, contributor, advisor or
+committee member.</li>
+<li>‘/{REPO_ID}/collection’ returns a list of collection id</li>
+<li>‘/{REPO_ID}/collection/{COLLECTION}’ returns a list eprint ids
+associated with the collection id</li>
+<li>‘/{REPO_ID}/type’ returns a list of document types in
+repository</li>
+<li>‘/{REPO_ID}/type/{TYPE}’ returns a list eprint id associated with
+document types in repository</li>
+<li>‘/{REPO_ID}/publications’ returns a list of publications</li>
+<li>‘/{REPO_ID}/publications/{PUBLICATION}’ returns a list eprint id of
+publications</li>
+<li>‘/{REPO_ID}/publisher’ returns a list of publisher</li>
+<li>‘/{REPO_ID}/publisher/{PUBLISHER}’ returns a list eprint id of
+publisher</li>
+</ul>
 </section>
 
 <footer>
