--- a/generating-an-eprints-user-list.html
+++ b/generating-an-eprints-user-list.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>${title}</title>
+    <title>eprinttools - generating-an-eprints-user-list.html</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/site.css">
 </head>
@@ -22,7 +22,23 @@
 </nav>
 
 <section>
-${body}
+<h1 id="generating-an-eprints-user-list">Generating an EPrints user
+list</h1>
+<h2 id="problem">Problem</h2>
+<p>The depositor value for an EPrints uses the EPrints Users values. I
+don’t think it is a good idea to expose this part of the REST API. On
+the other hand users are not frequently added or remove and EPrints
+provides an easy way to dump a user list which we can leverage when
+resolving the EPrint XML with who created the item.</p>
+<h2 id="solution">Solution</h2>
+<p>Authenticate into your EPrints repository as a repository
+administrator. Click on the “Admin” link, Click on the “Search Users”
+button, Check all the User Type check boxes and press the search button.
+This will give you a results list. For the export option from the
+results pick JSON (or the whatever format you like working with). The
+resulting page can be saved and is available to integrate into your
+application when decoding the EPrint XML values for
+<code>userid</code>.</p>
 </section>
 
 <footer>
