--- a/nav.html
+++ b/nav.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>${title}</title>
+    <title>eprinttools - nav.html</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="/css/site.css">
 </head>
@@ -22,7 +22,17 @@
 </nav>
 
 <section>
-${body}
+<ul>
+<li><a href="/">Home</a></li>
+<li><a href="./">README</a></li>
+<li><a href="license.html">LICENSE</a></li>
+<li><a href="install.html">INSTALL</a></li>
+<li><a href="docs/">Documentation</a></li>
+<li><a
+href="https://github.com/caltechlibrary/eprinttools">Github</a></li>
+<li><a
+href="https://github.com/caltechlibrary/eprinttools/releases/latest">Releases</a></li>
+</ul>
 </section>
 
 <footer>
