--- a/user-manual.html
+++ b/user-manual.html
@@ -43,6 +43,9 @@ localhost providing an extended EPrints 3 API via interaction with
 EPrints MySQL database(s)</li>
 <li><a href="ep3harvester.1.html">ep3harvester</a> harvests EPrints 3.x
 repository into a dataset collection</li>
+<li><a href="ep3genfeeds.1.html">ep3genfeeds</a> generates directory
+structure, JSON documents and non-templated Markdown content for a feeds
+site in the htdocs directory specified in the configuration.</li>
 </ul>
 <h2 id="tutorials">Tutorials</h2>
 <ul>
