fix: maintainer info in codemeta

--- a/about.html
+++ b/about.html
@@ -29,6 +29,14 @@
 <ul>
 <li>R. S. Doiel</li>
 </ul>
+<h3 id="contributors">Contributors</h3>
+<ul>
+<li>George Porter</li>
+</ul>
+<h3 id="maintainers">Maintainers</h3>
+<ul>
+<li></li>
+</ul>
 <p>Command line tools, Golang package and Python module for working with
 the EPrints 3.x REST API</p>
 <ul>
