--- a/TODO.html
+++ b/TODO.html
@@ -27,6 +27,15 @@
 <p>This is for the simplified eprinttools codebase.</p>
 <h2 id="bugs">Bugs</h2>
 <ul class="task-list">
+<li><input type="checkbox" disabled="" checked="" />updated value
+retrieved from database isn’t converting correctly into a time.Time
+object in Go. Need to figure the best way to make this correct</li>
+<li><input type="checkbox" disabled="" checked="" />Aggregation
+group_list.json has empty “combined” mapped when there are no eprintid
+for the specific group in the respository</li>
+<li><input type="checkbox" disabled="" />each index.html under people
+and group should have a corresponding index.json that is used by Pandoc
+to render index.md that then renders index.html, include.include</li>
 <li><input type="checkbox" disabled="" checked="" />Issue 40, SQL
 reference document_relation_type table issues</li>
 <li><input type="checkbox" disabled="" />Issue 41, Add related URL as
