fix: generating repository record type JSON files

--- a/about.html
+++ b/about.html
@@ -35,7 +35,7 @@
 </ul>
 <h3 id="maintainers">Maintainers</h3>
 <ul>
-<li></li>
+<li>R. S. Doiel</li>
 </ul>
 <p>Command line tools, Golang package and Python module for working with
 the EPrints 3.x REST API</p>
