commiting to main

--- a/about.html
+++ b/about.html
@@ -24,7 +24,7 @@
 
 <section>
 <h1 id="about-this-software">About this software</h1>
-<h2 id="eprinttools-1.2.1">eprinttools 1.2.1</h2>
+<h2 id="eprinttools-1.3.0">eprinttools 1.3.0</h2>
 <h3 id="authors">Authors</h3>
 <ul>
 <li>R. S. Doiel</li>
@@ -33,17 +33,27 @@
 <ul>
 <li>George Porter</li>
 </ul>
-<h3 id="maintainers">Maintainers</h3>
-<ul>
-<li>R. S. Doiel</li>
-</ul>
 <p>Command line tools, Golang package and Python module for working with
 the EPrints 3.x REST API</p>
+<h3 id="keywords">Keywords</h3>
 <ul>
-<li>License:
-https://caltechlibrary.github.io/eprinttools/license.html</li>
-<li>GitHub: https://github.com/caltechlibrary/eprinttools</li>
-<li>Issues: https://github.com/caltechlibrary/eprinttools/issues</li>
+<li>metadata</li>
+<li>repository</li>
+<li>EPrints</li>
+<li>CrossRef</li>
+<li>DataCite</li>
+<li>software</li>
+</ul>
+<h3 id="software">Software</h3>
+<ul>
+<li>License: <a
+href="https://caltechlibrary.github.io/eprinttools/license.html"
+title="link to license">https://caltechlibrary.github.io/eprinttools/license.html</a></li>
+<li>GitHub: <a href="https://github.com/caltechlibrary/eprinttools"
+title="link to GitHub">https://github.com/caltechlibrary/eprinttools</a></li>
+<li>Issues: <a
+href="https://github.com/caltechlibrary/eprinttools/issues"
+title="link to GitHub issues">https://github.com/caltechlibrary/eprinttools/issues</a></li>
 </ul>
 <h3 id="programming-languages">Programming languages</h3>
 <ul>
