--- a/windows-10-workflow.html
+++ b/windows-10-workflow.html
@@ -29,9 +29,9 @@ doi2eprintxml.exe on Windows 10</h1>
 <ol type="1">
 <li>With your web browser goto
 https://github.com/caltechlibrary/eprinttools/releases/</li>
-<li>Download the file called “eprinttools-v1.0.3-windows-amd64.zip”.
+<li>Download the file called “eprinttools-v1.2.2-windows-amd64.zip”.
 <ul>
-<li>if there is a newer version (e.g. v1.0.4) download that instead</li>
+<li>if there is a newer version (e.g. v1.2.2) download that instead</li>
 </ul></li>
 <li>Unzip the downloaded zip file</li>
 <li>Copy “doi2eprintxml.exe” to where you want to work
@@ -49,15 +49,15 @@ records into EPrints (e.g. CaltechAUTHORS) via the “import” button under
 “Manage Deposits” page.</p>
 <h3 id="workflow">Workflow</h3>
 <p>The typical workflow is to create a plain text file (UTF-8 encoded)
-using a text editor such as <a href="https://atom.io">Atom</a> with one
-DOI per line. The <code>doi2eprintxml.exe</code> file can then read the
-list and generate an EPrint XML document for importing into EPrints.
-Follow the following steps to generate a file called
-<strong>eprint.xml</strong> based on a list of of DOI in a file called
-<strong>doi.txt</strong>.</p>
+using a text editor such as <a
+href="https://code.visualstudio.com/">VSCode</a> with one DOI per line.
+The <code>doi2eprintxml.exe</code> file can then read the list and
+generate an EPrint XML document for importing into EPrints. Follow the
+following steps to generate a file called <strong>eprint.xml</strong>
+based on a list of of DOI in a file called <strong>doi.txt</strong>.</p>
 <h3 id="general-recipe">General recipe</h3>
 <ol type="1">
-<li>Open your text editor (e.g Atom)</li>
+<li>Open your text editor (e.g VSCode)</li>
 <li>With your text editor create a list of DOI on per line</li>
 <li>Save this list to your desktop as <strong>doi.txt</strong> NOTE:
 <strong>doi.txt</strong> is the name of your file you saved on your
