--- a/TODO.html
+++ b/TODO.html
@@ -24,9 +24,156 @@
 
 <section>
 <h1 id="action-items">Action items</h1>
+<h2 id="next">Next</h2>
+<p>Transitional support for feeds</p>
+<ul class="task-list">
+<li><input type="checkbox" disabled="" />Simplfied record (invenio-RDM
+record) to EPrint XML/EPrint JSON<ul class="task-list">
+<li><input type="checkbox" disabled="" />implement libdataset for v2
+dataset collection</li>
+<li><input type="checkbox" disabled="" />convert feeds’ datasets to v2
+ds collections</li>
+<li><input type="checkbox" disabled="" />CaltechDATA records are a good
+test case for mapping Invenio-RDM to JSON that will drive EPrints
+templates for feeds (v1 of feeds is EPrints centric)</li>
+<li><input type="checkbox" disabled="" />I need to generate EPrint XML
+as Invenio-RDM records (simplified records) first and input into the
+test instance of CaltechAUTHORS as RDM based repository</li>
+<li><input type="checkbox" disabled="" />I can then take the Invenio-RDM
+records returned and turn those into EPrint XMl/JSON for integration
+into existing feeds</li>
+</ul></li>
+</ul>
 <p>This is for the simplified eprinttools codebase.</p>
+<ul class="task-list">
+<li><input type="checkbox" disabled="" checked="" />Make a list of the
+missing page types I need to render to match feeds</li>
+<li><input type="checkbox" disabled="" />Render json types<ul>
+<li>Misc. JSON files
+<ul class="task-list">
+<li><input type="checkbox" disabled="" />caltechauthors-grid.json</li>
+<li><input type="checkbox" disabled="" />caltechdata-grid.json</li>
+<li><input type="checkbox" disabled="" />caltechthesis-grid.json</li>
+<li><input type="checkbox" disabled="" />directory_info.json (only found
+for people)</li>
+<li><input type="checkbox" disabled="" checked="" />index.json</li>
+<li><input type="checkbox" disabled="" />pagefind-entry.json</li>
+<li><input type="checkbox" disabled="" checked="" />group.json</li>
+<li><input type="checkbox" disabled="" checked="" />group_list.json</li>
+<li><input type="checkbox" disabled="" />people.json</li>
+<li><input type="checkbox" disabled=""
+checked="" />people_list.json</li>
+</ul></li>
+<li>CaltechTHESIS derived
+<ul class="task-list">
+<li><input type="checkbox" disabled="" />advisor-bachelors.json (needed
+in groups only)</li>
+<li><input type="checkbox" disabled="" />advisor-combined.json (needed
+in groups only)</li>
+<li><input type="checkbox" disabled="" />advisor-engd.json (needed in
+groups only)</li>
+<li><input type="checkbox" disabled="" />advisor-masters.json (needed in
+groups only)</li>
+<li><input type="checkbox" disabled="" />advisor-other.json (needed in
+groups only)</li>
+<li><input type="checkbox" disabled="" />advisor-phd.json (needed in
+groups only)</li>
+<li><input type="checkbox" disabled="" />advisor-senior_major.json
+(needed in groups only)</li>
+<li><input type="checkbox" disabled="" />advisor-senior_minor.json
+(needed in groups only)</li>
+<li><input type="checkbox" disabled="" checked="" />advisor.json
+(person/group)</li>
+<li><input type="checkbox" disabled="" />bachelors.json
+(person/group)</li>
+<li><input type="checkbox" disabled="" />engd.json (person/group)</li>
+<li><input type="checkbox" disabled="" />masters.json
+(person/group)</li>
+<li><input type="checkbox" disabled="" />phd.json (person/group)</li>
+<li><input type="checkbox" disabled="" />senior_major.json
+(person/group)</li>
+<li><input type="checkbox" disabled="" />senior_minor.json
+(person/group)</li>
+</ul></li>
+<li>CaltechAUTHORS derived
+<ul class="task-list">
+<li><input type="checkbox" disabled="" />combined.json (from
+CaltechAUTHORS), should be renamed combined_authors.json</li>
+<li><input type="checkbox" disabled="" />pub_types.json</li>
+<li><input type="checkbox" disabled="" />article.json</li>
+<li><input type="checkbox" disabled="" />audiovisual.json</li>
+<li><input type="checkbox" disabled="" />book.json</li>
+<li><input type="checkbox" disabled="" />book_section.json</li>
+<li><input type="checkbox" disabled="" />collection.json</li>
+<li><input type="checkbox" disabled="" />conference_item.json</li>
+<li><input type="checkbox" disabled="" />dataset.json</li>
+<li><input type="checkbox" disabled="" />image.json</li>
+<li><input type="checkbox" disabled="" />interactiveresource.json</li>
+<li><input type="checkbox" disabled="" />model.json</li>
+<li><input type="checkbox" disabled="" />monograph.json</li>
+<li><input type="checkbox" disabled="" />object_types.json</li>
+<li><input type="checkbox" disabled="" />patent.json</li>
+<li><input type="checkbox" disabled="" />software.json</li>
+<li><input type="checkbox" disabled="" />teaching_resource.json</li>
+<li><input type="checkbox" disabled="" />text.json</li>
+<li><input type="checkbox" disabled="" />thesis.json</li>
+<li><input type="checkbox" disabled="" />video.json</li>
+<li><input type="checkbox" disabled="" />workflow.json</li>
+</ul></li>
+<li>CaltechDATA
+<ul class="task-list">
+<li><input type="checkbox" disabled="" />combined_data.json</li>
+<li><input type="checkbox" disabled="" />software.json</li>
+<li><input type="checkbox" disabled="" />data.json</li>
+<li><input type="checkbox" disabled="" />teaching_resource.json</li>
+<li><input type="checkbox" disabled="" />data_object_types.json</li>
+<li><input type="checkbox" disabled="" />data_pub_types.json</li>
+<li><input type="checkbox" disabled="" />data_types.json</li>
+<li><input type="checkbox" disabled="" />image.json</li>
+</ul></li>
+</ul></li>
+<li><input type="checkbox" disabled="" />Render keys types</li>
+<li><input type="checkbox" disabled="" />Render Markdown types</li>
+<li><input type="checkbox" disabled="" />Render include types</li>
+<li><input type="checkbox" disabled="" />Render BibTeX types</li>
+<li><input type="checkbox" disabled="" />Render RSS types</li>
+<li><input type="checkbox" disabled="" />Make a list of the new pages
+types reflecting use of simplified records</li>
+</ul>
 <h2 id="bugs">Bugs</h2>
 <ul class="task-list">
+<li><input type="checkbox" disabled="" />ep3datasets renders EPrints
+JSON objects without primary_object being set</li>
+<li><input type="checkbox" disabled="" checked="" />Cleanup eprint
+content for public views<ul class="task-list">
+<li><input type="checkbox" disabled="" checked="" />Does sanitization
+happen at rendering of JSON/Markdown documents or when harvesting the
+content?<ul>
+<li>Santization happens when we render content, this lets us do one
+harvest for both dark and public archives</li>
+</ul></li>
+<li><input type="checkbox" disabled="" checked="" />Cleanup email
+content fields</li>
+<li><input type="checkbox" disabled="" checked="" />Remove “notes”</li>
+</ul></li>
+<li><input type="checkbox" disabled="" />Still debugging mapping the
+advisor_id, thesis_id and authors_id to person_id for aggregation tables
+and people feed generation<ul>
+<li>caltechthesis record 15078 is showing up with a local group of
+“Scott Cushing” who is actaully a committee member not a local
+gorup.</li>
+</ul></li>
+<li><input type="checkbox" disabled="" />Are messy people identifiers in
+EPrints are preventing a simple mapping to a single person id, when the
+EPRint record is read in it needs the ID should be corsswalked to the
+cl_people_id value.</li>
+<li><input type="checkbox" disabled="" />If feeds are “public only” then
+I need to strip email addresses from the JSON objects.</li>
+<li><input type="checkbox" disabled="" />For feeds generated as
+REPO_NAME-RECORD_TYPE.json to name the feed by record type only, but
+before I add this I need to see if there is any case where thesis in
+CaltechAUTHORS need to be itemized along with thesis in
+CaltechTHESIS</li>
 <li><input type="checkbox" disabled="" checked="" />updated value
 retrieved from database isn’t converting correctly into a time.Time
 object in Go. Need to figure the best way to make this correct</li>
@@ -63,7 +210,7 @@ and published EPrints don’t show in recent additions (is the an issue
 with generated views or with a datestamp not getting set
 correctly?).</li>
 </ul>
-<h2 id="next">Next</h2>
+<h2 id="next-1">Next</h2>
 <ul class="task-list">
 <li><input type="checkbox" disabled="" />Add deposit info to EPrintXML
 output</li>
